html updates and css

--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 
 <body>
     <nav>
-        <img src="logo.png">
-        <button>Login</button>
-        <button>Contact Us</button>
-        <button>
-            <i class="fa fa-share-alt" aria-hidden="true"></i>
-        </button>
+        <img src="img/logo.png">
+        <button class="login">Login</button> 
+        <button class="contact-us">Contact Us</button>
+        <a class="share"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
     </nav>
     <section class="hero">
         <h1>You choose the adventure, we make it happen</h1>
@@ -25,15 +23,13 @@
             the house or if it fits, i sits for purr for no reason. Caticus cuteicus ears back wide eyed soft kitty warm
             kitty little ball of furr. Poop in litter box, scratch the walls stare at wall turn and meow stare at wall some
             more meow again continue staring so ears back wide eyed roll over and sun my belly or need to chase tail</p>
-        <button>
-            <i class="fa fa-arrow-down" aria-hidden="true"></i>
-        </button>
+        <button class="dropdown-icon"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
         <div class="create-it">
             <div class="create-it__card">
                 <h4>Create It</h4>
                 <p> am the best stretch cough furball into food bowl then scratch owner for a new one. Intrigued by the shower
                     intently sniff hand cats making all the muffins, but attack dog, run away and pretend to be victim</p>
-                <button>
+                <button class="dropdown-icon">
                     <i class="fa fa-arrow-down" aria-hidden="true"></i>
                 </button>
             </div>
@@ -51,9 +47,7 @@
             <h4>Support It</h4>
             <p> am the best stretch cough furball into food bowl then scratch owner for a new one. Intrigued by the shower intently
                 sniff hand cats making all the muffins, but attack dog, run away and pretend to be victim</p>
-            <button>
-                <i class="fa fa-arrow-down" aria-hidden="true"></i>
-            </button>
+            <button class="dowpdown-icon"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
         </div>
         <input class="calendar">05 04 03 02 01</input>
         <div class="support-it__weather">
@@ -67,9 +61,7 @@
             <h4>Watch It</h4>
             <p> am the best stretch cough furball into food bowl then scratch owner for a new one. Intrigued by the shower intently
                 sniff hand cats making all the muffins, but attack dog, run away and pretend to be victim</p>
-            <button>
-                <i class="fa fa-arrow-down" aria-hidden="true"></i>
-            </button>
+            <button class="dropdown-icon"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
         </div>
         <div class="watch-it__weather">
             <h6>Sweden</h6>
@@ -84,9 +76,7 @@
             <h4>Watch It</h4>
             <p> am the best stretch cough furball into food bowl then scratch owner for a new one. Intrigued by the shower intently
                 sniff hand cats making all the muffins, but attack dog, run away and pretend to be victim</p>
-            <button>
-                <i class="fa fa-arrow-down" aria-hidden="true"></i>
-            </button>
+            <button class="dropdown-icon"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
             <button class="read-it__check">Cheack It Out</button>
         </div>
         <div class="watch-it__weather">
