--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Adventure</title>
 </head>
 
 <body>
-    <nav>
-        <img src="img/logo.png">
-        <button class="login">Login</button> 
-        <button class="contact-us">Contact Us</button>
+    <header>
+        <a class="logo">Adventure</a>
+        <button class="button button--primary">Login</button> 
+        <button class=" button button--secondary">Contact Us</button>
         <a class="share"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-    </nav>
+    </header>
     <section class="hero">
         <h1>You choose the adventure, we make it happen</h1>
         <p>Litter kitter kitty litty little kitten big roar roar feed me annoy kitten brother with poking, chase the pig around
@@ -100,13 +100,13 @@
             <button>Submit</button>
         </form>
     </section>
-    <section class="conect-with-us">
+    <section class="conect-w-us">
         <ul>
-            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="conect-w-us__item fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="conect-w-us__item fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="conect-w-us__item fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="conect-w-us__item fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="conect-w-us__item fa fa-envelope" aria-hidden="true"></i></a></li>
         </ul>
     </section>
 
